# openwrt-hotspot-banner

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.ci  Makefile  README.md  deploy.sh  zig-linker.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: release.md  theming.md
openwrt-config/: harden-router-services.sh  hotspot-firewall.sh  iptables-captive.sh  setup-router.sh
openwrt-package/openwrt-hotspot-banner/files-entware/opt/etc/: hotspot-fas.conf
openwrt-package/openwrt-hotspot-banner/files-entware/opt/etc/init.d/: S99hotspot-fas
openwrt-package/openwrt-hotspot-banner/files/etc/config/: hotspot-fas
openwrt-package/openwrt-hotspot-banner/files/etc/dnsmasq.d/: guest.conf
openwrt-package/openwrt-hotspot-banner/files/etc/hotplug.d/iface/: 99-hotspot-guest
openwrt-package/openwrt-hotspot-banner/files/etc/hotspot-banner/theme/: index.html
openwrt-package/openwrt-hotspot-banner/files/etc/init.d/: hotspot-fas
openwrt-package/openwrt-hotspot-banner/files/usr/lib/hotspot-banner/: guest-watcher.sh  uci-guest-setup.sh  (+1 more)
packaging/: targets.json
scripts/: build-ipk-all.sh  build-ipk.sh  check-shell.sh  deploy-package-test.sh  live-queue-e2e.sh  pkg-version.sh  qemu-openwrt-smoke.sh  router-ipk-remove-test.sh  router-ipk-test.sh  test-router.sh
src/: firewall.rs  handlers.rs  main.rs  pages.rs  state.rs  theme.rs
tests/: regression-guest-iface-and-dhcp.sh  teardown-mock.sh
themes/examples/tailwind/: README.md  build.sh
themes/examples/tailwind/src/: in.css  index.html  queue.html  success.html
(+5 files in other folders)
